Bug 844255 - Only use WS_EX_COMPOSITED on popups when using accelerated layers. r=Bas